--- a/index.html
+++ b/index.html
@@ -4,26 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IgniteX - Premium Lighters</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
     <!-- Navigation -->
-    <nav class="navbar">
-        <div class="logo">IgniteX</div>
-        <div class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#product">Product</a>
-         <a href="#features">Features</a>
-        <a href="#contact">Contact</a>
+    <!-- Bootstrap Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand logo" href="#">IgniteX</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto nav-links">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#product">Product</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#features">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
 
     <!-- Hero Section -->
     <div class="hero" id="home">
          <h2 style="color: #ffffff;">Elevate Your Flame</h2>
         <h4 style="color:#b8860b;"> with Precision, Style and Performance.</h4>
-        <h1 style="color: #d4c19c;"">Welcome to IgniteX</h1>
+        <h1 style="color: #d4c19c;">Welcome to IgniteX</h1>
        
         <p>Discover the perfect blend of elegance and functionality with IgniteX lighters. Designed for those who appreciate precision engineering and modern aesthetics, IgniteX offers a premium lighting experience like no other.</p>
         <a href="#" class="btn">Explore Now</a>
@@ -32,7 +52,7 @@
     <!-- Product Animation Section -->
     <div class="product-container" id="about">
         <div class="product-sticky" id="product-sticky">
-        <img src="./image.png" alt="Premium Headphones" class="product-image" id="product">
+        <img src="./product.png" alt="Premium Lighters" class="product-image" id="product">
         
         <!-- Content that appears during animation -->
         <div class="product-content">
